# views-reporting

./: .gitignore  README.md  pyproject.toml
documentation/: INSTANTIATION_CHECKLIST.md  validate_docs.sh
documentation/ADRs/: 000_use_of_adrs.md  001_ontology_of_the_repository.md  002_topology_and_dependency_rules.md  003_authority_of_declarations_over_inference.md  004_rules_for_evaluation_and_stability.md  005_testing_as_mandatory_critical_infrastructure.md  006_intent_contracts_for_non_trivial_classes.md  007_silicon_based_agents_as_untrusted_contributors.md  008_observability_and_explicit_failure.md  009_boundary_contracts_and_configuration_validation.md  010_technical_risk_register.md  011_data_arrives_on_original_scale.md  README.md  adr_template.md
documentation/CICs/: README.md  cic_dataset_transformation_module.md  cic_forecast_reconciler.md  cic_historical_line_graph.md  cic_mapping_module.md  cic_plot_distribution.md  cic_posterior_distribution_analyzer.md  cic_reconciliation_module.md  cic_report_module.md  cic_template.md
documentation/contributor_protocols/: carbon_based_agents.md  hardened_protocol_template.md  silicon_based_agents.md
documentation/standards/: logging_and_observability_standard.md  physical_architecture_standard.md
reports/: technical_risk_register.md
tests/: conftest.py  test_c01_layer1_specification.py  test_c01_thread_safety.py  test_historical_line_graph.py  test_mapping.py  test_plot_distribution.py  test_reconciliation_module.py  test_report_utils.py  test_reports.py  test_statistics.py  test_transformations.py
(+28 files in other folders)
