[tool.poetry]
name = "views-reporting"
version = "0.1.0"
description = "Visualization, reporting, statistics, and mapping for the VIEWS conflict forecasting platform."
authors = [
    "Simon Polichinel von der Maase <simmaa@prio.org>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
views-pipeline-core = ">=2.3.0,<3.0.0"
views-transformation-library = "^2.7.2"
torch = "^2.6.0"
scipy = "^1.15.1"
geopandas = "^1.0.1"
seaborn = "^0.13.2"
plotly = "^6.0.0"
plotly-express = "^0.4.1"
matplotlib = "^3.8"
markdown = "^3.8.2"
joblib = "^1.3"
polars = ">=1.34.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
ruff = "*"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning", "ignore::RuntimeWarning", "ignore::UserWarning"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
